--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "ComposableTimelineView"
 include ':app'
-include ':TimelineView'
+include ':core'
